# rust-is-beautiful

./: Cargo.toml  Dockerfile
assets/: issue.md
src/: main.rs
