[package]
name = "rust-is-beautiful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["rustls-tls-webpki-roots", "json"], default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["rt", "time", "macros", "fs"] }
